--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           go-version: '1.20'
 
       - name: Build application
-        run: go build -o asn asn.go
+        run: go build -o asnextractor asn.go
 
       - name: Run application
         run: ./asn -asn "AS396982" -port 443 -max 50 -tls true
